# drawtorun

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
.claude/commands/: rt-add-node-type.md  rt-build.md  rt-new-emitter.md  rt-new-fixture.md  rt-validate.md
.github/workflows/: ci.yml
fixtures/: build_fixture.py  showcase.excalidraw
fixtures/multi_file/: manifest.yaml
fixtures/multi_file/prod/: hk.excalidraw  ny.excalidraw
fixtures/single_file/: hk-prod.excalidraw  manifest.yaml
src/routingtools/: __init__.py  cli.py  excalidraw.py  manifest.py  model.py  parser.py  validator.py
src/routingtools/emit/: __init__.py  csv_emitter.py  json_emitter.py  mermaid_emitter.py  yaml_emitter.py
tests/: test_pipeline.py
